Fixed list css paragraph spacing, added some shortcodes and layouts to support the project pages

--- a/themes/foulab-2018/static/css/default/default.css
+++ b/themes/foulab-2018/static/css/default/default.css
@@ -58,8 +58,8 @@ ul {
 	padding: 0px;
 	margin-right: 0px;
 	margin-left: 10px;
-	margin-top: 10px;
-	margin-bottom: 0px;
+	margin-top: 3px;
+	margin-bottom: 10px;
 	list-style: square inside url("../../img/bullet.gif")
 }
 
